# Examination_project_DE24

./: .gitignore  README.md  docker-compose.yaml  dockerfile.orchestration  main.py  pyproject.toml
.streamlit/: config.toml
orchestration/: definition.py
src/.streamlit/: config.toml
src/backend/: data_processing.py
src/backend/constants/: utils.py
src/constans/: utils.py
src/data/: population.json  trafikanalys.xlsx
src/data_extract/: dlt_extract_data.py  dlt_trafikanaly.py  dlt_trafikanalys.py  extract_data_dump.py  extract_data_update.py  extract_json.py
src/data_transform/: .gitignore  dbt_project.yml  package-lock.yml
src/data_transform/macros/: change_to_kW.sql  fill_street.sql
src/data_transform/models/: schema.yml
src/data_transform/models/dim/: dim_area.sql  dim_charger.sql  dim_connector_attribute_value.sql  dim_geo.sql  dim_location.sql  dim_operator.sql  dim_vehicle.sql  dim_vehicle_in_traffic.sql  operator.sql
src/data_transform/models/fct/: fact.sql  fact_charger.sql  fact_connector.sql  fact_vehicle.sql
src/data_transform/models/mart/: analys.sql  charger_detail.sql  charger_vehicle.sql  infrastructur.sql  nr_charger.sql  nr_fast_charger.sql  vehicle_traffic.sql
src/data_transform/models/src/: source.yml  src_conn.sql  src_csmd.sql  (+3 more)
src/data_transform/seeds/: municipality_lan.csv
src/exploration/: eda_efrem.ipynb  eda_me.ipynb
src/frontend/dashboard/: charger_analys_page.py  home_page.py
src/frontend/graph/: chart_utils.py
src/orchestration/: definition.py
src/worksheet/: setup_roles.sql  setup_warehouse.sql  tst.sql
(+2 files in other folders)
