[project]
name = "examination-project-de24"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "dagster-webserver>=1.12.3",
    "dagster>=1.12.3",
    "dagster-dbt>=0.28.3",
    "dagster-dlt>=0.28.3",
    "dbt-core>=1.10.15",
    "dbt-duckdb>=1.10.0",
    "dlt[duckdb]>=1.18.2",
    "duckdb>=1.4.2",
    "ipykernel>=7.1.0",
    "pandas>=2.2.2",
    "python-dotenv>=1.0.1",
    "taipy>=4.1.0",
    "streamlit>=1.52.2",
]

[build-system]
requires = ["setuptools >= 68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
